--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,25 @@ uuid = "f445b5b8-6a66-4796-a926-cbd296444185"
 authors = ["sjvrensburg <stefanj@mandela.ac.za> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
 [compat]
+CSV = "0.10.15"
+Clustering = "0.15.8"
+DataFrames = "1.7.0"
+Distances = "0.10.12"
+KernelFunctions = "0.10.65"
+LinearAlgebra = "1.11.0"
+Random = "1.11.0"
+StatsBase = "0.34.4"
 julia = "1.11"
 
 [extras]
