--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# Temporary files created by the REPL
+*.julia/Project.toml
+*.julia/environments/v1.0/Manifest.toml
+
+# Miscellaneous other files
+*.log
+*~
+*.txt
+*.csv
